--- a/core/static/style/layout.less
+++ b/core/static/style/layout.less
@@ -1,6 +1,6 @@
 body {
   padding-top: 50px;
-  font-family: "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Microsoft YaHei", arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, "Segoe UI", Ubuntu, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
   font-size: 16px;
 
   > header {
