--- a/core/template/ticket_create_email.html
+++ b/core/template/ticket_create_email.html
@@ -3,6 +3,6 @@
 <hr />
 
 Created by <%= account.username %> at <%= ticket.created_at %>, View ticket:
-<a href='<%= config.web.url %>/ticket/view/?id=<%= ticket._id %>'><%= ticket._id %></a>
+<a href='<%= config.web.url %>/ticket/view/<%= ticket._id %>'><%= ticket._id %></a>
 <br />
 Notice from <%= t(config.web.t_name) %>.
