--- a/core/static/style/ticket.less
+++ b/core/static/style/ticket.less
@@ -2,14 +2,14 @@
   padding: 6px 12px;
 }
 
+.img-avatar {
+  width: 58px;
+  height: 58px;
+}
+
 .list-group-item {
   a {
     margin-right: 10px;
-  }
-
-  img.pull-left {
-    width: 58px;
-    height: 58px;
   }
 
   .list-content {
