--- a/core/view/ticket/view.jade
+++ b/core/view/ticket/view.jade
@@ -31,12 +31,12 @@ block main
       for reply in ticket.replies
         li.list-group-item.clearfix
           a.pull-left
-            img(src= reply.account.preferences.avatar_url)
+            img.img-avatar(src= reply.account.preferences.avatar_url)
           .list-content
             p!= reply.content_html
             p
               span.label.label-info= reply.account.username
-              span.label.label-default(title= reply.created_at)= moment(reply.created_at).fromNow()
+              span.label.label-default(title=reply.created_at)= moment(reply.created_at).fromNow()
 
   .row
     if ticket.status != 'closed'
@@ -66,7 +66,7 @@ prepend sidebar
     header= t('ticket.creator')
     li.list-group-item.clearfix
       a.pull-left
-        img(src= ticket.account.preferences.avatar_url)
+        img.img-avatar(src= ticket.account.preferences.avatar_url)
       p
         span.label.label-info= ticket.account.username
         br
@@ -76,7 +76,7 @@ prepend sidebar
     header= t('ticket.members')
     for member in ticket.members
       a.pull-left
-        img(src= member.preferences.avatar_url, alt= member.username)
+        img.img-avatar(src=member.preferences.avatar_url, alt=member.username)
 
 append footer
   script(src='/script/ticket/view.js')
