--- a/core/view/admin.jade
+++ b/core/view/admin.jade
@@ -76,7 +76,7 @@ block main
         pre.output-coupon-code
 
   .account-details-modal.modal.fade
-    .modal-dialog
+    .modal-dialog(style='width: 800px;')
       .modal-content
         .modal-header
           button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
