--- a/plugin/linux/view/monitor.jade
+++ b/plugin/linux/view/monitor.jade
@@ -84,7 +84,7 @@ block content
                 td= item.process
                 td #{item.cpu}s
                 td #{item.memory.toFixed(1)}M
-                td #{(item.storage / 1024).toFixed(1)}M
+                td #{(item.storage).toFixed(1)}M
 
     .row
       .panel.panel-default.process-list
