--- a/core/view/panel/financials.jade
+++ b/core/view/panel/financials.jade
@@ -5,19 +5,19 @@ prepend header
 
 block main
   .row
-    header= t('common.charge')
+    header= t('account.financials')
 
     for payment_method in payment_methods
       != payment_method
 
   .row
-    header= t('view.pay.pay_log')
+    header= t('view.financials.payment_log')
     table.table.table-hover
       thead
         tr
           th= t('common.time')
           th= t('common.amount')
-          th= t('view.pay.pay_method')
+          th= t('view.financials.pay_method')
       tbody
         for item in deposit_log
           tr
@@ -29,7 +29,7 @@ block main
               td #{item.payload.type} #{item.payload.order_id}
 
   .row
-    header= t('view.pay.billing_log')
+    header= t('view.financials.billing_log')
     table.table.table-hover
       thead
         tr
@@ -41,6 +41,9 @@ block main
           tr
             td= moment(item.created_at).format('YYYY-MM-DD HH:mm:ss')
             td
-              each info, plan_name in item.payload
-                p #{plan_name}: #{info.billing_unit_count} unit before #{info.last_billing_at}
+              if item.type == 'billing'
+                each info, plan_name in item.payload
+                  p #{plan_name}: #{info.billing_unit_count} unit before #{info.last_billing_at}
+              else if item.type == 'usage_billing' && item.payload.service == 'shadowsocks'
+                p #{item.payload.service}: #{item.payload.traffic_mb.toFixed(1)} MB
             td #{item.amount.toFixed(2)} CNY
