--- a/core/view/panel/financials.jade
+++ b/core/view/panel/financials.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend header
-  title #{t('common.charge')} | #{t(config.web.t_name)}
+  title #{t('common.financials')} | #{t(config.web.t_name)}
 
 block main
   .row
