--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -22,12 +22,8 @@ html
           #navbar-collapse.collapse.navbar-collapse
             ul.nav.navbar-nav
               for hook in selectHook('view.layout.menu_bar')
-                if hook.target
-                  li
-                    a(href=hook.href, target=hook.target)= t(hook.t_body)
-                else
-                  li
-                    a(href=hook.href)= t(hook.t_body)
+                li
+                  a(href=hook.href, target=hook.target)= hook.plugin.getTranslator(req)(hook.t_body)
             ul.nav.navbar-nav.navbar-right
               if account
                 li
