--- a/plugin/wiki/view/index.jade
+++ b/plugin/wiki/view/index.jade
@@ -4,10 +4,10 @@ prepend header
   title #{t('')} | #{t(config.web.t_name)}
 
 block main
-  for category in category_list
-    h2= category.category
+  for category in categories
+    h2= category.pages[0].plugin.getTranslator(req)(category.t_name)
     ul
       for page in category.pages
         li
-          a(href="/wiki/#{category.t_category}/#{page.t_title}")= page.title
-          | &nbsp; (#{page.language})
+          a(href="/wiki/#{category.name}/#{page.name}")= page.plugin.getTranslator(req)(page.t_title)
+          small &nbsp; (#{page.language})
