--- a/plugin/bitcoin/view/payment_method.jade
+++ b/plugin/bitcoin/view/payment_method.jade
@@ -2,4 +2,7 @@ div
   h2= t('')
   p= t('view.payment_tips')
   p= t('view.exchange_rate_tips', {rate10: (exchange_rate * 10).toFixed(4)})
-  pre= account.pluggable.bitcoin.bitcoin_deposit_address
+  if account.pluggable.bitcoin
+    pre= account.pluggable.bitcoin.bitcoin_deposit_address
+  else
+    pre= t('view.no_address')
