--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     block header
-      link(rel='stylesheet', href='http://cdn.staticfile.org/twitter-bootstrap/3.2.0/css/bootstrap.min.css')
+      link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
       link(rel='stylesheet', href='/style/layout.css')
       for hook in selectHook('view.layout.styles')
         link(rel='stylesheet', href=hook.path)
@@ -78,10 +78,10 @@ html
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
           ga('create', '#{config.web.google_analytics_id}', 'auto');
           ga('send', 'pageview');
-      script(src='http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js')
-      script(src='http://cdn.staticfile.org/jquery-cookie/1.4.1/jquery.cookie.min.js')
-      script(src='http://cdn.staticfile.org/underscore.js/1.7.0/underscore-min.js')
-      script(src='http://cdn.staticfile.org/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
+      script(src='/bower_components/jquery/dist/jquery.min.js')
+      script(src='/bower_components/jquery-cookie/jquery.cookie.js')
+      script(src='/bower_components/underscore.js/underscore-min.js')
+      script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
       script(src='/script/layout.js')
       for hook in selectHook('view.layout.scripts')
         script(src=hook.path)
