--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -80,7 +80,7 @@ html
           ga('send', 'pageview');
       script(src='/bower_components/jquery/dist/jquery.min.js')
       script(src='/bower_components/jquery-cookie/jquery.cookie.js')
-      script(src='/bower_components/underscore.js/underscore-min.js')
+      script(src='/bower_components/underscore/underscore-min.js')
       script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
       script(src='/script/layout.js')
       for hook in selectHook('view.layout.scripts')
