--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -7,14 +7,15 @@ append header
   link(rel='stylesheet', href='/style/ticket.css')
 
 block main
-  header= t('ticket.create_ticket')
-  form.form-horizontal
-    .form-group.padding
-      input.input-title.form-control(type='text', placeholder= t('ticket.title'))
-    .form-group.padding
-      textarea.input-content.form-control(rows='15')
-    .form-group.padding
-      button.btn.btn-lg.btn-primary.action-create(type='button')= t('ticket.create')
+  #create-view.row
+    header= t('ticket.create_ticket')
+    form.form-horizontal
+      .form-group.padding
+        input.input-title.form-control(type='text', placeholder= t('ticket.title'))
+      .form-group.padding
+        textarea.input-content.form-control(rows='15')
+      .form-group.padding
+        button.btn.btn-lg.btn-primary.action-create(type='button')= t('ticket.create')
 
 append footer
-  script(src='/script/ticket/create.js')
+  script(src='/script/ticket.js')
